--- a/src/client/components/CategoriesList/CategoriesList.css
+++ b/src/client/components/CategoriesList/CategoriesList.css
@@ -1,5 +1,5 @@
 @value sansSerif from '../../helpers/fonts.css';
-@value grayLighter from '../../helpers/colors.css';
+@value grayLighter, purple from '../../helpers/colors.css';
 
 .wrapper {
   position: relative;
@@ -18,4 +18,14 @@
   font-family: sansSerif;
   font-size: 33px;
   color: grayLighter;
+}
+
+.emptyCategories p {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.emptyCategories a {
+  font-size: 20px;
+  color: purple;
 }
