--- a/src/client/components/Logo/Logo.css
+++ b/src/client/components/Logo/Logo.css
@@ -11,7 +11,7 @@
 }
 
 .logo.small {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .dot {
